# saga-cpp-adaptor-x509

./: CHANGES  INSTALL  Makefile  PACKAGE  README  README.md  configure  configure.in
config/: Makefile  make.cfg.in
context/: Makefile  x509_context_adaptor.cpp  x509_context_adaptor.hpp  x509_context_adaptor.ini
